# MAI_OC

./: CMakeLists.txt  log_strace.txt  main.cpp
includes/: Complex.hpp  Matrix.hpp
includes/exceptions/: exceptions.hpp
src/: Complex.cpp  Matrix.cpp  child.cpp  firstSolution.cpp  parent.cpp  secondSolution.cpp
src/exceptions/: exceptions.cpp
